--- a/src/style.css
+++ b/src/style.css
@@ -320,3 +320,16 @@ header {
     height: 60px;
   }
 }
+
+.not-found {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  height: calc(100vh - 96px);
+  justify-content: center;
+}
+
+.not-found a {
+  text-decoration: none;
+}
