--- a/src/style.css
+++ b/src/style.css
@@ -326,10 +326,18 @@ header {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  height: calc(100vh - 96px);
   justify-content: center;
+  margin-top: 2rem;
 }
 
 .not-found a {
   text-decoration: none;
+}
+
+.not-found-text {
+  margin: 0;
+  color: #c03440;
+  font-family: inherit;
+  font-weight: bold;
+  font-size: 1.8rem;
 }
